testio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: testio-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: testio
spec:
  hosts:
  - "*"
  gateways:
  - testio-gateway
  http:
  - match:
    - uri:
        exact: /metrics
    route:
    - destination:
        host: ticktock
        port:
          number: 9080
